--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-BD_CNN=mongodb+srv://ravenlord:Nf7jNjrbBvho8oTV@cluster0.yczcm.mongodb.net/test
+BD_CNN=mongodb+srv://ravenlord:Nf7jNjrbBvho8oTV@cluster0.yczcm.mongodb.net/miDataBase
